--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style> 
 Body {
   font-family: Calibri, Helvetica, sans-serif;
-  background-color: black;
+  background-color: white;
 }
 button { 
        background-color: #4CAF50; 
@@ -58,12 +58,12 @@ button {
             Forgot <a href="#"> password? </a> 
         </div> 
     </form>
-  <! javascript>
+<! javascript>
 <script language="javascript">
 function validate(text1,text2)
 {
     if(username == test && password == test)
-    load("run.html");
+    window.location.href = "https://mybinder.org/v2/gh/wduangoupa/Capstone/5f933de255afa11b970180fa9dc246c285818cc4?filepath=Movie-Recommendation.ipynb"
     else
     {
         load("fail.html");
