--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@ button {
 function check(form)
 {
 
-if(form.userid.value == "Roseindia" && form.pwd.value == "Roseindia")
+if(form.username.value == "test" && form.password.value == "test")
 {
-	return true;
+	window.location = "http://www.google.com/"
+
+
 }
 else
 {
