--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ button {
             <input type="text" placeholder="Enter Username" name="username" required>
             <label>Password : </label> 
             <input type="password" placeholder="Enter Password" name="password" required>
-            <button type="submit" onclick="check(this.form)" value="Login">Login</button> 
+            <button type="submit" onclick=" return check(this.form)" value="Login">Login</button> 
         </div> 
     </form>   
 <script language="javascript">
@@ -61,8 +61,8 @@ function check(form)
 
 if(form.username.value == "test" && form.password.value == "test")
 {
-	window.location = "http://www.google.com/"
-
+	window.location.href = "http://www.google.com/"
+	return true;
 
 }
 else
