--- a/index.html
+++ b/index.html
@@ -46,31 +46,33 @@ button {
 </head>  
 <body>  
     <center> <h1> Flix2Go Login Form </h1> </center> 
-    <form>
+    <form id = "login-form">
         <div class="container"> 
             <label>Username : </label> 
-            <input type="text" placeholder="Enter Username" name="username" required>
+            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
             <label>Password : </label> 
-            <input type="password" placeholder="Enter Password" name="password" required>
-            <button type="submit" onclick=" return check(this.form)" value="Login">Login</button> 
+            <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+            <button type="submit" value="Login" id="login-form-submit">Login</button> 
         </div> 
     </form>   
+
 <script language="javascript">
-function check(form)
-{
+const loginForm = document.getElementById("login-form");
+const loginButton = document.getElementById("login-form-submit");
+const loginErrorMsg = document.getElementById("login-error-msg");
 
-if(form.username.value == "test" && form.password.value == "test")
-{
-	window.location.href = "http://www.google.com/"
-	return true;
+loginButton.addEventListener("click", (e) => {
+    e.preventDefault();
+    const username = loginForm.username.value;
+    const password = loginForm.password.value;
 
-}
-else
-{
-	alert("Error Password or Username")
-	return false;
-}
-}
+    if (username === "test" && password === "test") {
+        alert("You have successfully logged in.");
+        location.href = "Google.com";;
+    } else {
+        loginErrorMsg.style.opacity = 1;
+    }
+})
 </script>
 </body>   
 </html>
