--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ button {
     <form id = "login-form">
         <div class="container"> 
             <label>Username : </label> 
-            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Please enter username">
             <label>Password : </label> 
-            <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+            <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Please enter password">
             <button type="submit" value="Login" id="login-form-submit">Login</button> 
         </div> 
     </form>   
