--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ loginButton.addEventListener("click", (e) => {
 
     if (username === "test" && password === "test") {
         alert("You have successfully logged in.");
-        window.location.href = "Google.com";;
+        window.open('google.com');;;
     } else {
         loginErrorMsg.style.opacity = 1;
     }
