--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ loginButton.addEventListener("click", (e) => {
 
     if (username === "test" && password === "test") {
         alert("You have successfully logged in.");
-        window.location = "http://www.google.com/";
+        window.location = "https://mybinder.org/v2/gh/wduangoupa/Capstone/5f933de255afa11b970180fa9dc246c285818cc4?filepath=Movie-Recommendation.ipynb";
     } else {
         loginErrorMsg.style.opacity = 1;
     }
