--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ loginButton.addEventListener("click", (e) => {
     const password = loginForm.password.value;
 
     if (username === "test" && password === "test") {
-        alert("You have successfully logged in.");
+        alert("Login Successful");
         window.location = "https://mybinder.org/v2/gh/wduangoupa/Capstone/5f933de255afa11b970180fa9dc246c285818cc4?filepath=Movie-Recommendation.ipynb";
     } else {
-        loginErrorMsg.style.opacity = 1;
+        alert("Please enter the correct username and password.");
     }
 })
 </script>
