--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ loginButton.addEventListener("click", (e) => {
     const username = loginForm.username.value;
     const password = loginForm.password.value;
 
-    if (username === "test" && password === "test") {
+    if (username === "admin" && password === "admin") {
         alert("Login Successful");
-        window.location = "https://mybinder.org/v2/gh/wduangoupa/Capstone/5f933de255afa11b970180fa9dc246c285818cc4?filepath=Movie-Recommendation.ipynb";
+        window.location = "https://mybinder.org/v2/gh/wduangoupa/Capstone/1a50112ba03f518de7ddeb9669ea56e0bdd2116f?filepath=Movie-Recommendation.ipynb";
     } else {
         alert("Please enter the correct username and password.");
     }
